--- a/table.html
+++ b/table.html
@@ -83,6 +83,11 @@
 		      <td>Tea</td>
 		      <td>the Bird</td>
 		    </tr>
+		    <tr>
+		      <th scope="row">2</th>
+		      <td>Blue Potion</td>
+		      <td>Thornton</td>
+		    </tr>
 		  </tbody>
 		</table>
 		</div>
@@ -90,17 +95,17 @@
 	<footer class="foo">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
 					<section>
 						<h1>Siguenos en Redes Sociales</h1>
-						<a href="#">www.facebook.com/drinksoda</a><br/>
+						<a href="#">www.facebook.com/drinksoda</a>
 						<a href="#">www.twitter.com/drinksoda</a>
 						<a href="#">www.instragram.com/drinksoda</a>
 					</section>
 				</div>
 
 
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+				<div class="col-xl-4 col-lg-3 col-md-4 col-sm-12 col-12">
 					<section>
 						<address>
 							<h1>Buscanos en</h1>
@@ -109,10 +114,11 @@
   							City, State
 						</address>
 						
+						
 					</section>
 				</div>
 
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
+				<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
 					<section>
 					    <h1>No olvides compartir</h1>
 						<p>para nosotros, es un agrado Servirte con nuestros productos
