--- a/index.html
+++ b/index.html
@@ -47,10 +47,27 @@
 		</nav>
 	<div class="container">
 		
-		<div class="picture-cover">
-			
-		</div>
-
+		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="src/drinks.png" class="d-block w-100" alt="...">
+			  </div>
+			  <div class="carousel-item">
+				<img src="src/drinks2.png" class="d-block w-100" alt="...">
+			  </div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div>
+		<div class="sub_container">
+		<h3>Conoce algunas las caracteristicas de nuestros productos <button class="btn btn-outline-info" data-toggle="collapse" data-target="#C_collapse">Ver caracteristicas</button></h3>
+		<div class="collapse" id="C_collapse">
 		<p>
 			<section>
 				<h2>Refrescante</h2>
@@ -75,12 +92,14 @@
 				azucar en sí, no aporta calorias extra y contribuye a incorporar hasta un 45% mas de agua</p>
 			</section>
 		</p>
+	</div>
+</div>
 		<div class="d-flex flex-wrap">
 			<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
 				<div class="card">
 					<img class="card-img-top" src="energy.png" alt="Card image cap">
      				 <div class="card-body">
-        				<h5 class="card-title">Pandy Drink</h5>
+        				<h5 class="card-title" data-toggle="tooltip" data-placement="top" title="Keep Moving">Pandy Drink</h5>
         				<p class="card-text">Dedicada especialmente para aquellos que buscan una reaccion animadora y que proporcione
         				una reactivacion completa, para estar con una actitud al 100</p>
         				<a href="#" class="btn btn-primary btn-lg btn-block"> <i class="fas fa-info-circle"></i> Conocer mas</a>
@@ -91,7 +110,7 @@
     			<div class="card">
     				<img class="card-img-top" src="water.png" alt="Card image cap">
      				 <div class="card-body">
-        				<h5 class="card-title">Ocean Water</h5>
+        				<h5 class="card-title" data-toggle="tooltip" data-placement="top" title="Feels Nature">Ocean Water</h5>
         				<p class="card-text">Delicioza y refrescante bebida natural, proveniente de los mas exclusivos manantiales, que crean un balance entre salud y frescura</p>
         				<a href="#" class="btn btn-primary btn-lg btn-block"><i class="fas fa-info-circle"></i> Conocer mas</a>
       				</div>
@@ -101,7 +120,7 @@
     			<div class="card">
     				<img class="card-img-top" src="tea.jpg" alt="Card image cap">
      				 <div class="card-body">
-        				<h5 class="card-title">Tea Special</h5>
+        				<h5 class="card-title" data-toggle="tooltip" data-placement="top" title="Relaxing flavor">Tea Special</h5>
         				<p class="card-text">refrescante bebida de tea frio el cual posee los balances entre saludable y sabroso, perfecta para
         					complementar una tarde de picnic
         				</p>
@@ -113,13 +132,51 @@
     			<div class="card">
     				<img class="card-img-top" src="blue.jpg" alt="Card image cap">
      				 <div class="card-body">
-        				<h5 class="card-title">Blue position</h5>
+        				<h5 class="card-title" data-toggle="tooltip" data-placement="top" title="Blue flavor">Blue position</h5>
         				<p class="card-text">Bebida excluisiva para deportistas y atletas, perfecta para la una re-hidratacion completa y segura positivo al 100 ademas..,</p>
         				<a href="#" class="btn btn-primary btn-lg btn-block"><i class="fas fa-info-circle"></i> Conocer mas</a>
       				</div>
 				</div>
     		</div>
 
+		</div>
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title" id="exampleModalLabel">Ingresa tus datos y Suscribete</h5>
+				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+				<div class="modal-body">
+				  <form>
+					<div class="form-group">
+						<label for="message-text" class="col-form-label">Nombre</label>
+						<input class="form-control" id="message-text"></input>
+					  </div>
+					<div class="form-group">
+						<label for="exampleFormControlInput1">Email address</label>
+						<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+					</div>
+				  </form>
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+				  <button type="button" class="btn btn-success">Confirmar</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		<div>
+			<div class="row">
+				
+				<div class="col">
+					<h5>Quieres estar mas notificado con nuestras ofertas? Da click en el boton</h5>
+					<button type="button" class="btn btn-danger btn-lg btn-block" data-toggle="modal" data-target="#exampleModal">
+						<i class="fas fa-bell"></i> Suscribirse</button>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -161,8 +218,17 @@
 		</div>
 	</footer>
 	<!--SCRIPTS-->
+	
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js" ></script>
-	<script type="text/javascript" src="node_modules/popper.js/dist/popper.min.js" ></script>
+	<script type="text/javascript" src="node_modules/popper.js/dist/umd/popper.min.js" ></script>
 	<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js" ></script>
+	<script>
+		$('.carousel').carousel({
+			interval: 1000
+		});
+		$(function(){
+			$("[data-toggle='tooltip']").tooltip()
+		});
+	</script>
 </body>
 </html>
