--- a/table.html
+++ b/table.html
@@ -43,9 +43,130 @@
 		    <li class="breadcrumb-item active" aria-current="page">Features</li>
 		  </ol>
 		</nav>
-	<div class="container">
 		
+	<div class="container">
 		<h1 class="text-center">Comparativa de Productos</h1>
+		<!--PILLS-->
+		<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+			<li class="nav-item" role="presentation">
+			  <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Tabla Comparativa</a>
+			</li>
+			<li class="nav-item" role="presentation">
+			  <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Caracteristicas</a>
+			</li>
+			<li class="nav-item" role="presentation">
+			  <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Contact</a>
+			</li>
+		  </ul>
+		  <div class="tab-content" id="pills-tabContent">
+			<div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+				<div class="table-data">
+					<table class="table">
+					  <thead class="thead-dark">
+						<tr>
+						  <th scope="col">#</th>
+						  <th scope="col">Producto</th>
+						  <th scope="col">Patrocinio</th>
+						</tr>
+					  </thead>
+					  <tbody>
+						<tr>
+						  <th scope="row">1</th>
+						  <td>DrinkWater</td>
+						  <td>All Nature</td>
+						</tr>
+						<tr>
+						  <th scope="row">2</th>
+						  <td>Blue Potion</td>
+						  <td>Thornton</td>
+						</tr>
+						<tr>
+						  <th scope="row">3</th>
+						  <td>Pandy Drink</td>
+						  <td>the Bird</td>
+						</tr>
+						 <tr>
+						  <th scope="row">4</th>
+						  <td>Tea</td>
+						  <td>the Bird</td>
+						</tr>
+						<tr>
+						  <th scope="row">2</th>
+						  <td>Blue Potion</td>
+						  <td>Thornton</td>
+						</tr>
+					  </tbody>
+					</table>
+					</div>
+			</div>
+			<div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+				<div class="accordion" id="accordionExample">
+					<div class="card">
+					  <div class="card-header" id="headingOne">
+						<h2 class="mb-0">
+						  <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+							Beneficios Nutritivos
+						  </button>
+						</h2>
+					  </div>
+				  
+					  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+						<div class="card-body">
+							<div class="row">
+						  <div class=col>
+							<img src="src/a.jpg">
+						  </div>
+						  <div class="col">
+							  <p>El agua es la molécula más común en todos los seres vivos en la Tierra. De hecho, la masa de la mayoría de los organismos, incluidos los seres humanos, contiene entre un setenta y noventa por ciento de agua. Así, el 
+								  cuerpo humano está compuesto de entre un 55 % y un 78 % de agua, dependiendo de  complexión y sus medidas.
+							Verdaderamente, el agua desempeña un papel biológico fundamental y todas las formas de vida conocidas a día de hoy dependen de ella para sobrevivir. Esto se debe entre otros motivos a sus propiedades como disolvente, que  posibilitan las diversas reacciones químicas de los compuestos orgánicos, cruciales para todas las funciones vitales.</p>
+						  </div>
+						</div>
+						</div>
+					  </div>
+					</div>
+					<div class="card">
+					  <div class="card-header" id="headingTwo">
+						<h2 class="mb-0">
+						  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+							Beneficios Musculares
+						  </button>
+						</h2>
+					  </div>
+					  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+						<div class="card-body">
+							<div class="row">
+								<div class=col>
+								  <img src="src/a.jpg">
+								</div>
+								<div class="col">
+									<p>El agua es la molécula más común en todos los seres vivos en la Tierra. De hecho, la masa de la mayoría de los organismos, incluidos los seres humanos, contiene entre un setenta y noventa por ciento de agua. Así, el 
+										cuerpo humano está compuesto de entre un 55 % y un 78 % de agua, dependiendo de  complexión y sus medidas.
+								  Verdaderamente, el agua desempeña un papel biológico fundamental y todas las formas de vida conocidas a día de hoy dependen de ella para sobrevivir. Esto se debe entre otros motivos a sus propiedades como disolvente, que  posibilitan las diversas reacciones químicas de los compuestos orgánicos, cruciales para todas las funciones vitales.</p>
+								</div>
+							  </div>
+						</div>
+					  </div>
+					</div>
+					<div class="card">
+					  <div class="card-header" id="headingThree">
+						<h2 class="mb-0">
+						  <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+							Beneficios Random
+						  </button>
+						</h2>
+					  </div>
+					  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+						<div class="card-body">
+						  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+						</div>
+					  </div>
+					</div>
+				  </div>
+			</div>
+			<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">Coming Soon</div>
+		  </div>
+
 		<p>
 			<section>
 				<p>Entre sus bondades, nuestros productos se caracteriza por generar mayor saciedad de hambre y sed que el agua comun, por lo
@@ -53,44 +174,7 @@
 				azucar en sí, no aporta calorias extra y contribuye a incorporar hasta un 45% mas de agua</p>
 			</section>
 		</p>
-		<div class="table-data">
-		<table class="table">
-		  <thead class="thead-dark">
-		    <tr>
-		      <th scope="col">#</th>
-		      <th scope="col">Producto</th>
-		      <th scope="col">Patrocinio</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <th scope="row">1</th>
-		      <td>DrinkWater</td>
-		      <td>All Nature</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">2</th>
-		      <td>Blue Potion</td>
-		      <td>Thornton</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">3</th>
-		      <td>Pandy Drink</td>
-		      <td>the Bird</td>
-		    </tr>
-		     <tr>
-		      <th scope="row">4</th>
-		      <td>Tea</td>
-		      <td>the Bird</td>
-		    </tr>
-		    <tr>
-		      <th scope="row">2</th>
-		      <td>Blue Potion</td>
-		      <td>Thornton</td>
-		    </tr>
-		  </tbody>
-		</table>
-		</div>
+		
 	</div>
 	<footer class="foo">
 		<div class="container">
