--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</nav>
 	<div class="container">
 		
-		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+		<div id="carouselExampleFade" class="carousel slide carousel-fade d-none d-sm-block" data-ride="carousel">
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
 				<img src="src/drinks.png" class="d-block w-100" alt="...">
@@ -66,7 +66,7 @@
 			</a>
 		  </div>
 		<div class="sub_container">
-		<h3>Conoce algunas las caracteristicas de nuestros productos <button class="btn btn-outline-info" data-toggle="collapse" data-target="#C_collapse">Ver caracteristicas</button></h3>
+		<h3>Conoce algunas las caracteristicas de nuestros productos <button class="btn btn-warning" data-toggle="collapse" data-target="#C_collapse"> Ver <i class="fas fa-sort-down"></i></button></h3>
 		<div class="collapse" id="C_collapse">
 		<p>
 			<section>
