--- a/table.html
+++ b/table.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Required meta tags-->
 	<meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!--STYLES -->
+    <!--build:css css/index.css -->
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link href="node_modules/@fortawesome/fontawesome-free/css/fontawesome.css" rel="stylesheet">
-  	<link href="node_modules/@fortawesome/fontawesome-free/css/brands.css" rel="stylesheet">
-  	<link href="node_modules/@fortawesome/fontawesome-free/css/solid.css" rel="stylesheet">
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+	<!--endbuild-->
 
 	<title>First Assigment</title>
 </head>	
@@ -213,10 +212,12 @@
 
 		</div>
 	</footer>
-	<!--SCRIPTS-->
+	<!--build:js js/index.js -->
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js" ></script>
-	<script type="text/javascript" src="node_modules/popper.js/dist/popper.min.js" ></script>
+	<script type="text/javascript" src="node_modules/popper.js/dist/umd/popper.min.js" ></script>
 	<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js" ></script>
+	<script type="text/javascript" src="js/index.js"></script>
+	<!--endbuild-->
 </body>
 </html>
 
